objects/adapps__OptimizerPlus_Active_Val_Rule_Item__c.object
<CustomObject>
    <fields>
        <fullName>adapps__Active_Validation_Rule__c</fullName>
        <label>Active Validation Rule</label>
        <referenceTo>adapps__OptimizerPlus_Active_Val_Rules__c</referenceTo>
        <relationshipLabel>Active Validation Rule Items</relationshipLabel>
        <relationshipName>Active_Validation_Rule_Items</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>adapps__Count__c</fullName>
        <label>Count</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>adapps__Object__c</fullName>
        <label>Object</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>adapps__Status__c</fullName>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>adapps__OptimizerPlus_Status</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>adapps__Url__c</fullName>
        <label>Url</label>
        <type>Url</type>
    </fields>
    <label>Active Validation Rule Item</label>
    <nameField>
        <label>Active Validation Rule Item Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Active Validation Rule Items</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>